--- a/index.htm
+++ b/index.htm
@@ -127,8 +127,7 @@
                  
                 <footer>
                                  <p class="pagetop"><a href="#top">返回頁首</a></p>
-                                 <p class="Copyright"><small>&copy;copyRight 2020國立聯合大學文化創意與數位行銷學系</small></p>
-
+                               <p class='copyright'><small>&copyRight 2020 文創系</small></p>
 </body>
 
 </html>
